Make display of Button's focus border more obvious in high contrast mode, fixes #13544, thanks Katie.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@26096 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -195,8 +195,9 @@ table.dijitInline {
 
 	/* In claro, hovering a toolbar button reduces padding and adds a border.
 	 * Not needed in a11y mode since Toolbar buttons always have a border.
+	 * Note also that padding=0 makes focus border hard to see, so using padding=1.
 	 */
-	padding: 0 !important;
+	padding: 1 !important;
 }
 
 .dijit_a11y .dijitTextBoxReadOnly .dijitInputField,
